fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .intro {
-  width:100vw;
+  width:90vw;
   height:100vh;
+  margin:auto;
 }
 
 .intro-text {
@@ -22,8 +23,7 @@
 }
 
 .btn {
-  margin-left:0.5rem;
-  margin-right:0.5rem;
+  margin:0.5rem;
 }
 
 .project-img-container {
